--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -31,6 +31,9 @@ dependencies:
     HeadDatabase:
       load: BEFORE
       required: false
+    AdvancedEnchantments:
+      load: BEFORE
+      required: false
 
 permissions:
   betonquestaddon.command:
