--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,11 @@
+org.gradle.jvmargs=-Xmx3G
 kotlin.code.style=official
+
+# Project settings
+project_version=1.5.2
+
+# Dependency settings
+paper_version=1.21.10
+nexo_version=1.16.0-dev.8
+itemsadder_version=4.0.10
+craftengine_version=0.0.66
