--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,10 @@ paper_version=1.21.10
 nexo_version=1.16.0-dev.8
 itemsadder_version=4.0.10
 craftengine_version=0.0.66
+lands_version=7.15.20
+placeholderapi_version=2.11.7
+worldguard_version=7.0.14
+worldedit_version=7.3.14
+customcrops_version=3.6.40
+betonquest_version=3.0.0-SNAPSHOT
+hmccosmetics_version=2.8.3-e88b8461
