--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -24,3 +24,6 @@ dependencies:
     CraftEngine:
       load: BEFORE
       required: false
+    CustomCrops:
+      load: BEFORE
+      required: false
