--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 kotlin.code.style=official
 
 # Project settings
-project_version=0.0.4
+project_version=0.0.5
 
 # Dependency settings
 paper_version=1.21.8
 nexo_version=1.16.0-dev.8
-itemsadder_version=4.0.10
-craftengine_version=0.0.66
-lands_version=7.15.20
-placeholderapi_version=2.11.7
-worldguard_version=7.0.14
-worldedit_version=7.3.14
-customcrops_version=3.6.40
-betonquest_version=3.0.0-SNAPSHOT
-hmccosmetics_version=2.8.3-e88b8461
+items_adder_version=4.0.10
+craft_engine_version=0.0.66
+custom_crops_version=3.6.40
+custom_fishing_version=2.3.7
+beton_quest_version=3.0.0-SNAPSHOT
+hmc_cosmetics_version=2.8.3-e88b8461
+
+boosted_yaml_version=1.3.7
+bstats_version=3.1.0
