--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,19 @@
 kotlin.code.style=official
 
 # Project settings
-project_version=0.0.5
+project_version=0.0.6
+config_version=2
 
 # Dependency settings
 paper_version=1.21.8
 nexo_version=1.16.0-dev.8
 items_adder_version=4.0.10
+
 craft_engine_version=0.0.66
 custom_crops_version=3.6.40
 custom_fishing_version=2.3.7
+custom_nameplates_version=3.0.19
+
 beton_quest_version=3.0.0-SNAPSHOT
 hmc_cosmetics_version=2.8.3-e88b8461
 
