--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 kotlin.code.style=official
 
 # Project settings
-project_version=0.0.65
-config_version=4
+project_version=0.0.66
+config_version=5
 
 # Dependency settings
 paper_version=1.21.8
@@ -16,6 +16,7 @@ custom_nameplates_version=3.0.19
 
 beton_quest_version=3.0.0-SNAPSHOT
 hmc_cosmetics_version=2.8.3-e88b8461
+world_guard_version=7.0.14
 
 boosted_yaml_version=1.3.7
 bstats_version=3.1.0
