--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -39,3 +39,6 @@ dependencies:
     TypeWriter:
       load: BEFORE
       required: false
+    WorldGuard:
+      load: BEFORE
+      required: false
