--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 kotlin.code.style=official
 
 # Project settings
-project_version=0.0.66
+project_version=0.0.67
 config_version=5
 
 # Dependency settings
 paper_version=1.21.8
-nexo_version=1.16.0-dev.8
+nexo_version=1.17.0
 items_adder_version=4.0.10
 craft_engine_version=0.0.67
 
