--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 kotlin.code.style=official
 
 # Project settings
-project_version=0.0.67
-config_version=5
+project_version=0.0.7
+config_version=6
 
 # Dependency settings
 paper_version=1.21.8
@@ -17,6 +17,8 @@ custom_nameplates_version=3.0.19
 beton_quest_version=3.0.0-SNAPSHOT
 hmc_cosmetics_version=2.8.3-e88b8461
 world_guard_version=7.0.14
+
+coins_engine_version=2.6.0
 
 boosted_yaml_version=1.3.7
 bstats_version=3.1.0
