--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,11 +16,13 @@ jobs:
         uses: actions/checkout@v3
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: 17
+          java-version: 21
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Publish
         env:
           # Make sure you have added a repository secret in the repository's settings
