--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-      - name: Validate Gradle Wrapper
-        uses: gradle/wrapper-validation-action@v1
+#      - name: Validate Gradle Wrapper
+#        uses: gradle/wrapper-validation-action@v1
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
